k3sdeploys/nodered/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: node-red
  name: node-red
  namespace: domotica
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-red
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: node-red
    spec:
      containers:
        - image: nodered/node-red
          imagePullPolicy: Always
          name: node-red
          ports:
            - containerPort: 1880
              protocol: TCP
          resources:
            requests:
              memory: "128Mi"
              cpu: "300m"
            limits:
              memory: "512Mi"
              cpu: "1000m"
          volumeMounts:
            - mountPath: /data
              name: node-red-claim
      volumes:
        - name: node-red-claim
          persistentVolumeClaim:
            claimName: nodered
